@@ -1,3 +1,7 @@
+2002-06-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* mueller.cpp: check for NaN.
+
 2002-05-10  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* allroots.cpp: Improve robustness.
